# eth-lightnode-client

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  connection_pool.cpp  http_json_rpc_request.cpp  http_json_rpc_request.h  http_json_rpc_request_impl.cpp  http_json_rpc_request_impl.h  http_json_rpc_request_ptr.h  http_server.cpp  http_server.h  http_session.cpp  http_session.h  json_rpc.cpp  json_rpc.h  main.cpp
src/common/: big_numbers.h  signal_handler.cpp  signal_handler.h  string_utils.h
src/data_storage/: data_address.cpp  data_address.h  data_log.h  data_storage.cpp  data_storage.h  data_updater.cpp  data_updater.h
src/eth_wallet/: EthWallet.cpp  EthWallet.h
src/ethtx/: cert.cpp  cert.h  cert2.cpp  const.h  ethtx.cpp  utils2.cpp
src/exception/: except.cpp  except.h
src/log/: log.cpp  log.h
src/settings/: settings.cpp  settings.h  settings.json
src/task_handlers/: add_addresses_to_batch.cpp  add_addresses_to_batch.h  add_addresses_to_batch_tkn.cpp  add_addresses_to_batch_tkn.h  add_to_tracking_handler.cpp  add_to_tracking_handler.h  base_handler.cpp  base_handler.h  batch_balance.cpp  batch_balance.h  batch_balance_tkn.cpp  batch_balance_tkn.h  batch_history.cpp  batch_history.h  batch_history_tkn.cpp  batch_history_tkn.h  create_tx_base_handler.cpp  create_tx_base_handler.h  create_tx_handler.cpp  create_tx_handler.h  create_tx_token_base_handler.cpp  create_tx_token_base_handler.h  create_tx_token_handler.cpp  create_tx_token_handler.h  del_addresses_to_batch.cpp  del_addresses_to_batch.h  del_addresses_to_batch_tkn.cpp  del_addresses_to_batch_tkn.h  del_from_tracking_handler.cpp  del_from_tracking_handler.h  fetch_balance_handler.cpp  fetch_balance_handler.h  fetch_balance_tkn.cpp  fetch_balance_tkn.h  fetch_history_handler.cpp  fetch_history_handler.h  fetch_history_tkn.cpp  fetch_history_tkn.h  generate_handler.cpp  generate_handler.h  (+23 more)
src/tests/: CMakeLists.txt  task_handlers_test.cpp
src/wallet_storage/: wallet_storage.cpp  wallet_storage.h
tests/: CMakeLists.txt  task_handlers_test.cpp
